新增模型思考模式